--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -173,8 +173,9 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 == Implementation
 
 This section describes some noteworthy details on how certain features are implemented.
-
+[[Edit-Trip]]
 === [Itinerary] Edit trip/day/event feature
+
 ==== Aspect: Model
 Editing of trip/day/event can be accessed from `TripsPage/DaysPage/EventsPage` respectively. The
 The execution of commands in the each page is facilitated by `TripManagerParser/DayViewParser/EventViewParser` and respectively.
@@ -236,6 +237,7 @@ The logic of editing a field and committing it to memory is a simple process of 
 
 image::EditTripPageActivityDiagram.png[title="Execution of the done command on any edit page"]
 
+[[Delete_Trip]]
 === [Itinerary] Delete Trip/Day/Event
 ==== Implementation
 Deletion of `Trip/Day/Event` is facilitated by `PageStatus`. `PageStatus` stores the current state of execution of the user program.
@@ -256,6 +258,159 @@ When the command `delete <index>` is executed, `DeleteTripCommand/DeleteDayComma
 The `Day/Trip` reference contains the list of `Events/Days` in memory respectively (`DayList/EventList`). `DayList#remove/EventList#remove` are methods in the respective list classes used to delete the day/event. These are executed, modifying the in memory `TravelPal` and `Trip/Event/Day` is removed.
 
 image::ItineraryDelete2.png[]
+
+//Expense
+=== [Expense] Expense Manager
+The _Expense Manager_ is one of the main features of TravelPal, it maintains a list of `Expense` stored in an `ExpenseList`.
+_Expense Manager_ is also capable of calculating and displaying budget, sorting expenses and toggling display options.
+[[expense_model]]
+==== Aspect : Model
+
+
+
+[[expense_class_diagram]]
+image::expense/developerguide/ExpenseModelClassDiagram.png[title=Class diagram showing the expense model]
+
+===== Expense
+
+`Expense` is an abstract class storing expense model.
+
+It has three compulsory fields, the _name of expense_, the _amount of expense_, and a _day number_. These fields are used to store information related to an expense.
+They are implemented as instance of class `Name` `Budget` and `DayNumber` respectively.
+
+`MiscExpense` and `PlannedExpense` are the child classes extending from `Expense` class, they are
+used to represent the two types of expenses: _miscellaneous expense_ and _planned expense_.
+
+
+===== ExpenseList
+
+`ExpenseList` is an class that stores the `Expense` models.
+It supports wrapper methods around the underlying `ObservableList` to facilitate the use in the logic components.
+
+[[expense_ui]]
+==== Aspect : UI
+
+image::expense/developerguide/ExpenseUIClassDiagram.png[title=Class diagram showing the user interface of expense]
+
+NOTE: The `ExpensesPage` implements an `UiChangeConsumer` interface to facilitate the toggling between the _Days View_ and
+ _List View_ of _Expense Manager_, which is not shown in the diagram above.
+
+The UI of expense manager mainly consists of two `Page`: `ExpensesPage` and `EditExpensePage`.
+
+`ExpensePage` is the component in charge of displaying expense and budget information. It has a list of `ExpenseCard`, a component
+ that contains individual expense details. `ExpensePage` extends `PageWithSidebar` as it contains navigation bar that helps user to
+ navigate between different features.
+
+In `ExpensePage`, user can toggle between _Days View_ and _List View_. In _Days View_, a list of `DailyExpensesPanel` is used to group
+`ExpenseCard` according to date.
+
+`EditExpensePage` is the main page for creating and editing of expense. Both `ExpensesPage` and `EditExpensePage` have access to `Model` and `Logic`
+of the application, for handling of stored data and parsing commands.
+
+From `ExpensePage`, user can navigate to _Currency_ feature of application through CLI or GUI.
+
+==== Aspect : Logic
+
+===== Create an expense
+
+The creation of a new `Expense` is done in two ways:
+
+1. The creation of a `PlannedExpense` is created when a new `Event` with a `Budget` is created. The execution happens in `DoneEditingEventCommand`.
+
+* When the `Name` or `Budget` field of `Event` is modified, a method call replaces the current `Expense` associated with the `Event` with an updated `Expense`.
+
+2. The creation of a `MiscExpense` is done by calling `EnterCreateExpenseCommand`, which brings user to an _Expense Setup Page_.
+
+===== Edit an expense
+
+Editing of expense can be accessed from `ExpensePage`. The execution of command is handled by `ExpenseManagerParser` and
+the command accesses the model through `Model#getPageStatus()` method. The details of execution is similar to _Edit trip/day/event_ feature (see <<Edit-Trip>>)
+
+Only the _amount of expense_ field of a `PlannedExpense` can be edited with an `edit` command. When `done` command is executed
+after the _amount of expense_ is edited, both the expense in `ExpenseList` and the `Event` will be updated.
+
+The following sequence diagram shows the sequence of method call when `DoneEditCommand#execute(model)` is called in `LogicManager`.
+[[expense_sequence_diagram]]
+image::expense/developerguide/DoneEditExpenseCommandSequenceDiagram.png[title=Sequence diagram showing the execution of DoneEditCommand]
+
+When `DoneEditCommand#execute(model)` is called, `getPageStatus()` is used to fetch information / update information from `model`. The following
+steps shows the sequence of event happened within the method:
+
+1. The current instance of `EditExpenseDescriptor` and `Expense` in `model` are returned and stored as `editExpenseDescriptor` and `expenseToEdit` in `logic`.
+
+2. A new instance of `Expense`, `expenseToAdd` is created by calling `buildExpense()` in `editExpenseDescriptor`.
+
+3. Through `getPageStatus()`, `set(expenseToEdit, expenseToAdd)` is called on `EventList`, which updates the unedited `expenseToEdit` by replacing it with the edited `expenseToAdd`.
+
+4. The `DayNumber` in `expenseToAdd` is returned so that logic can update the associated `Event` by going to the corresponding `Day` in `DayList`.
+
+5. `updateExpense(expenseToAdd)` is called on `EventList` so that the target `Event` will have its `Expenditure` updated.
+
+6. By calling `setPageStatus()`, the current `EditExpenseDescriptor` and `Expense` will be reset, the current page will be set to _Expense Manager Page_.
+
+7. `CommandResult` is returned to give user feedback and update UI.
+
+===== Delete an Expense
+
+Deletion of expense is similar to the _Delete Trip/Day/Event_ feature (see <<Delete_Trip>>).
+
+The `DeleteExpenseCommand` in logic checks for index of deletion and type of expense. Only `MiscExpense` can be deleted through
+this command. Below is an example execution of deleting an expense:
+[[delete_expense_activity_diagram]]
+image::expense/developerguide/DeleteExpenseDiagram.png[title=Activity diagram showing the execution of deleting an expense]
+
+
+'''
+
+//Currency
+=== [Currency] Currency
+The _Currency_ maintains a list of `CustomisedCurrency` stored in an `CurrencyList`.
+_Currency_ supports creation, deletion and selection of currency.
+[[expense_model]]
+==== Aspect : Model
+[[expense_class_diagram]]
+image::expense/developerguide/CurrencyModelClassDiagram.png[title=Class diagram showing the currency model]
+
+===== CustomisedCurrency
+
+`CustomisedCurrency` is the generic abstraction of a user defined currency.
+
+A `CustomisedCurrency` contains exactly one instance `Name` `Symbol` and `Rate` for each of these three classes, which represents
+ the _name of currency_, _currency symbol_, and _exchange rate of the currency (to Singapore Dollars)_ respectively.
+
+===== CurrencyList
+
+`CurrencyList` is an class that stores the `CustomisedCurrency` instances. It supports wrapper methods around the underlying `ObservableList` for the use of logic components.
+
+[[currency_ui]]
+==== Aspect : UI
+
+image::expense/developerguide/CurrencyUIClassDiagram.png[title=Class diagram showing the user interface of currency]
+
+The main `Page` for displaying and creating currency is `CurrencyPage`. The page contains a list of `CurrencyCard` for displaying
+individual currency details. Two types of `CurrencyCard`: `SelectedCurrencyCard` and `UnelectedCurrencyCard` are used to indicate
+the currency in use. Upon launching of the application, a default `CustomisedCurrency` -- Singapore Dollars is automatically added to
+the `CurrencyList`, which is not deletable. Thus, there will always be at least one `CurrencyCard` in `CurrencyPage`.
+
+`CurrencyPage` also contains text fields for input of new currency information. It has a `PresetSymbols` instance which contains a group of `ToggleButton` which
+updates the symbol in `MainWindow`. `CurrencyPage` have access to `Model` and `Logic`
+of the application, for handling of stored data and parsing commands.
+
+From `ExpensePage`, user can navigate to _Expense Manager_ feature of application through CLI or GUI.
+
+==== Aspect : Logic
+
+The executions of add / delete of `CustomisedCurrency` is similar to those of `Trip` / `Day` / `Event` / `Expense`. More details can be found in the previous sections:
+<<Edit-Trip>>
+
+====== Select a Currency
+
+Selection of `CustomisedCurrency` is achieved by promoting it to the front of `CurrencyList`, while the first `CustomisedCurrency` in the list
+is to be used to display `Budget` with the selected currency symbol and rate conversion.
+
+All the monetary values in the application is displayed through calling the method from UI: `Budget#getValueStringInCurrency(CustomisedCurrency)`
+
+'''
 
 // tag::undoredo[]
 === [Proposed] Undo/Redo feature
