--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -218,9 +218,9 @@ Likes a meme at the specified index. +
 Format: `like INDEX`
 
 [TIP]
-You could use arrow key kbd:[Up] to quickly like a meme at the given index. +
-To do this, key in the full command `like INDEX` then press arrow key kbd:[Up]. +
-You can also use arrow key kbd:[Left] and kbd:[Right] to increase / decrease the meme index.
+You could use arrow key kbd:[UP] to quickly like a meme at the given index. +
+To do this, key in the full command `like INDEX` then press arrow key kbd:[UP]. +
+You can also use arrow key kbd:[LEFT] and kbd:[RIGHT] to increase / decrease the meme index.
 
 ==== Disliking a meme: `dislike`
 
@@ -557,7 +557,7 @@ Format: `clear`
 
 === Statistics Tab
 
-View various statistics about the memes such as tags and likes count by tags, and most used templates.
+View various statistics about the memes such as tags and likes count by tags.
 
 // tag::command-suggestion[]
 === Command Suggestions
@@ -589,6 +589,13 @@ CS2103` +
 If kbd:[Tab] is pressed, `c` in the command box will be replaced by `CS`.
 
 // end::command-suggestion[]
+
+=== Screen Time `[Coming in v2.0]`
+
+In the coming v2.0 version, the user can view their screen time on the Application, just like some mobile platform
+such as iOS or Android. It allows user to keep track of the amount of time spent on the App so that he/she could
+manage time properly. It will be under statistics tab, accessed via command `tab statistics`, and is updated by weeks.
+
 == FAQ
 
 *Q*: How do I transfer my data to another Computer? +
