--- a/docs/team/zhixianggg.adoc
+++ b/docs/team/zhixianggg.adoc
@@ -16,7 +16,7 @@ We eventually turned it into a product called Seller Manager Lite (SML), which a
 Users interact with it using a Command Line Interface (CLI) and it has a Graphical User Interface (GUI) created with JavaFX. It is written in Java and has more than 15,000 lines of code.
 
 My role was being in charge of the Logic component, implementing the commands and parsers for Customer, Phone and Order data.
-Additionally, I was tasked to implement an undo/redo, find (search) and copy commands.
+Also, I was tasked to implement undo/redo, find (search) and copy commands.
 
 
 
@@ -61,10 +61,10 @@ https://github.com/AY1920S1-CS2103T-T09-4/main/pull/119[#119], https://github.co
 * *Other contributions*:
 
 ** Project management:
-*** Managed releases `v1.3.1`, `v1.3.2` and `v1.4.1` (3 releases) on GitHub
+*** Managed releases `v1.3.1`, `v1.3.2` and `v1.3.4` (3 releases) on GitHub
 
 ** Enhancements to existing features:
-*** Created an Archived Order Tab Panel (backend) as we realise that there was too much clutter in the order tab. https://github.com/AY1920S1-CS2103T-T09-4/main/pull/148[#148]
+*** Created an Archived order tab panel (backend) as we realise that there was too much clutter in the order tab panel. https://github.com/AY1920S1-CS2103T-T09-4/main/pull/148[#148]
 *** Added a history command to allow forgetful users to remember what they typed in. https://github.com/AY1920S1-CS2103T-T09-4/main/pull/154[#154]
 *** Helped to implement Model Manager https://github.com/AY1920S1-CS2103T-T09-4/main/pull/75[#75]
 
