--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -32,7 +32,7 @@ image::febee99.png[width="150", align="left"]
 {empty}[https://febee99.github.io[homepage]] [https://github.com/febee99[github]] [<<febee99#, portfolio>>]
 
 Role: Developer +
-Responsibilities: Code Quality + Scheduling and Tracking
+Responsibilities: Code Quality + Scheduling and Tracking + Replenish List Commands + Auto-sorting + Recommendations
 
 '''
 
